# raytracer

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  render_to_video.py
.devcontainer/: Dockerfile  devcontainer.json
scenes/: brutalist.ray  pbrTest.ray  pbr_test.ray  reflection&refraction.ray  reflectionTest.ray  reflectiveSpheres&Tris.ray  refractPrism.ray  refractionTest.ray  singleSphereLighted.ray  tess_test.ray  testEverything.ray  textureSphereTest.ray  textureTriTest.ray
scenes/textures/: compress_exr.py
scenes/textures/clean_plaster_wall/: plastered_wall_03_rough_2k.exr
scenes/textures/cobblestone_pavement/: cobblestone_pavement_rough_2k.exr
scenes/textures/gravelly_sand/: gravelly_sand_rough_2k.exr
scenes/textures/painted_plaster_wall/: painted_plaster_wall_rough_2k.exr
scenes/textures/patterned_clay_plaster/: patterned_clay_plaster_rough_2k.exr
scenes/textures/plank_flooring/: plank_flooring_03_rough_2k.exr
scenes/textures/rocky_terrain/: rocky_terrain_rough_2k.exr
src/: camera.rs  hittable.rs  lib.rs  loader.rs  main.rs  material.rs  parser.rs  ray.rs  scene.rs  tracer.rs
src/hittable/: mesh.rs  mod.rs  sphere.rs  tessellator.rs  triangle.rs
src/loader/: file_format.rs  mod.rs  parser.rs  shapes.rs
