[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
glam = { version = "0.30.9", features = ["rand", "zerocopy", "approx", "fast-math"] }

image = "0.25.9"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
log = "0.4"
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
bvh = { version = "0.12.0", features = ["simd"] }
color-backtrace = { version = "0.7" }
approx = "0.5.1"
rand = "0.9.2"
nalgebra = "0.34.1"

[profile.dev]
opt-level = 3 # no lto optimizations but still max compiler opts

[profile.release]
lto = "fat"
panic = "abort"
debug = true
