[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
glam = { version = "0.30.9", features = ["rand", "zerocopy", "approx", "fast-math", "serde"] }

image = { version = "0.25.9", features = ["exr", "png", "jpeg", "hdr"] }
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
log = "0.4"
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
bvh = { version = "0.12.0", features = ["simd"] }
color-backtrace = { version = "0.7" }
approx = "0.5.1"
rand = "0.9.2"
nalgebra = "0.34.1"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
serde_with = "3.16.1"
enum_dispatch = "0.3.13"
oidn = "2.3.3"

[profile.dev]
opt-level = 3 # no lto optimizations but still max compiler opts

[profile.release]
#lto = "fat"
panic = "abort"
debug = true
