[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
glam = { version = "0.30.9", features = ["rand", "zerocopy", "approx", "fast-math"] }

image = { version = "0.25.9", features = ["exr", "png", "jpeg", "hdr"] }
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
log = "0.4"
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
bvh = { version = "0.12.0", features = ["simd"] }
color-backtrace = { version = "0.7" }
rand = "0.9.2"
nalgebra = "0.34.1"
rand_distr = "0.5.1"
oidn = { version = "2.3.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
splines = { version = "4.2.0", features = ["serde"] }


[profile.dev]
opt-level = 3 # no lto optimizations but still max compiler opts


[features]
default = ["denoise"]
denoise = ["dep:oidn"]


[profile.release]
#lto = "fat"
panic = "abort"
debug = true
